tests/NormalTests/paczka1/fuzzy1/72211367.err
Error in line 6: SbCpcueWW8q A179 5,8
Error in line 7: SbCpcueWW8q S7 56,9
Error in line 21: KmxrBmrLo S7 49,4
Error in line 35: SgLDoMKNd S7 82,9
Error in line 22: SAGUL S7 86,3
